plugins {
    id "java"
    id "jacoco"
}

sourceCompatibility = JavaVersion.VERSION_11
targetCompatibility = JavaVersion.VERSION_11

repositories {
    mavenCentral()
}

dependencies {
    implementation "org.apache.tomcat.embed:tomcat-embed-core:10.1.13"
    implementation "jakarta.servlet:jakarta.servlet-api:5.0.0"
    implementation "javax.servlet.jsp:javax.servlet.jsp-api:2.3.3"
    implementation "jakarta.servlet.jsp.jstl:jakarta.servlet.jsp.jstl-api:3.0.0"
    implementation "jakarta.annotation:jakarta.annotation-api:2.0.0"
    annotationProcessor "jakarta.annotation:jakarta.annotation-api:2.0.0"

    implementation "org.reflections:reflections:0.10.2"

    implementation "com.fasterxml.jackson.core:jackson-databind:2.15.2"

    implementation "org.apache.commons:commons-lang3:3.13.0"
    implementation "ch.qos.logback:logback-classic:1.2.12"

    testImplementation "org.assertj:assertj-core:3.24.2"
    testImplementation "org.junit.jupiter:junit-jupiter-api:5.7.2"
    testImplementation "org.mockito:mockito-core:5.4.0"
    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.7.2"
}
